# cilk

./: .gitignore  Makefile.am  README  configure.ac
FAQ/: cilk-faq.bfnn
cilk2c/: ANSI-C.y
examples/: Makefile.am
support/: Makefile.am
